added set-option -g status-style bg=default to get transparent status bar on maos

--- a/tmux/.tmux-in.conf
+++ b/tmux/.tmux-in.conf
@@ -71,6 +71,7 @@ bind -r r source-file ~/.tmux-in.conf
 set -g status on
 set -g status-position top
 set -g status-bg default
+set-option -g status-style bg=default
 set -g status-fg green
 set-option -g status-left ""
 set-option -g status-left-length 32
