--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -6,8 +6,10 @@
 #
 # Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart/
+# For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
+
+config_version = 3
 
 [look]
 buffer_open_before_autojoin = on
@@ -27,6 +29,7 @@ display_ctcp_unknown = on
 display_extended_join = on
 display_host_join = on
 display_host_join_local = on
+display_host_notice = on
 display_host_quit = on
 display_join_message = "329,332,333,366"
 display_old_topic = on
@@ -43,8 +46,12 @@ item_display_server = buffer_plugin
 item_nick_modes = on
 item_nick_prefix = on
 join_auto_add_chantype = off
+list_buffer_scroll_horizontal = 10
+list_buffer_sort = "~name2"
+list_buffer_topic_strip_colors = on
 msgbuffer_fallback = current
 new_channel_position = none
+new_list_position = none
 new_pv_position = none
 nick_completion_smart = speakers
 nick_mode = prefix
@@ -84,6 +91,8 @@ item_nick_modes = default
 item_tls_version_deprecated = yellow
 item_tls_version_insecure = red
 item_tls_version_ok = green
+list_buffer_line_selected = white
+list_buffer_line_selected_bg = 24
 message_account = cyan
 message_chghost = brown
 message_join = green
@@ -152,6 +161,7 @@ notify = ""
 password = ""
 proxy = ""
 realname = ""
+registered_mode = "r"
 sasl_fail = continue
 sasl_key = ""
 sasl_mechanism = plain
@@ -159,13 +169,13 @@ sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
 split_msg_max_length = 512
-ssl = off
-ssl_cert = ""
-ssl_dhkey_size = 2048
-ssl_fingerprint = ""
-ssl_password = ""
-ssl_priorities = "NORMAL:-VERS-SSL3.0"
-ssl_verify = on
+tls = off
+tls_cert = ""
+tls_dhkey_size = 2048
+tls_fingerprint = ""
+tls_password = ""
+tls_priorities = "NORMAL:-VERS-SSL3.0"
+tls_verify = on
 usermode = ""
 username = "tony"
 
@@ -173,13 +183,13 @@ username = "tony"
 freenode.addresses = "chat.freenode.net/6697"
 freenode.proxy
 freenode.ipv6
-freenode.ssl = on
-freenode.ssl_cert
-freenode.ssl_password
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify
+freenode.tls = on
+freenode.tls_cert
+freenode.tls_password
+freenode.tls_priorities
+freenode.tls_dhkey_size
+freenode.tls_fingerprint
+freenode.tls_verify
 freenode.password
 freenode.capabilities
 freenode.sasl_mechanism = plain
@@ -215,16 +225,17 @@ freenode.notify
 freenode.split_msg_max_length
 freenode.charset_message
 freenode.default_chantypes
+freenode.registered_mode
 twitch1.addresses = "irc.twitch.tv/6667"
 twitch1.proxy
 twitch1.ipv6
-twitch1.ssl
-twitch1.ssl_cert
-twitch1.ssl_password
-twitch1.ssl_priorities
-twitch1.ssl_dhkey_size
-twitch1.ssl_fingerprint
-twitch1.ssl_verify
+twitch1.tls
+twitch1.tls_cert
+twitch1.tls_password
+twitch1.tls_priorities
+twitch1.tls_dhkey_size
+twitch1.tls_fingerprint
+twitch1.tls_verify
 twitch1.password = "${sec.data.twitch1}"
 twitch1.capabilities
 twitch1.sasl_mechanism
@@ -260,16 +271,17 @@ twitch1.notify
 twitch1.split_msg_max_length
 twitch1.charset_message
 twitch1.default_chantypes
+twitch1.registered_mode
 twitch.addresses = "irc.twitch.tv/6667"
 twitch.proxy
 twitch.ipv6
-twitch.ssl
-twitch.ssl_cert
-twitch.ssl_password
-twitch.ssl_priorities
-twitch.ssl_dhkey_size
-twitch.ssl_fingerprint
-twitch.ssl_verify
+twitch.tls
+twitch.tls_cert
+twitch.tls_password
+twitch.tls_priorities
+twitch.tls_dhkey_size
+twitch.tls_fingerprint
+twitch.tls_verify
 twitch.password = "${sec.data.twitch}"
 twitch.capabilities
 twitch.sasl_mechanism
@@ -305,16 +317,17 @@ twitch.notify
 twitch.split_msg_max_length
 twitch.charset_message
 twitch.default_chantypes
+twitch.registered_mode
 liberachat.addresses = "irc.libera.chat/6697"
 liberachat.proxy
 liberachat.ipv6
-liberachat.ssl = on
-liberachat.ssl_cert
-liberachat.ssl_password
-liberachat.ssl_priorities
-liberachat.ssl_dhkey_size
-liberachat.ssl_fingerprint
-liberachat.ssl_verify
+liberachat.tls = on
+liberachat.tls_cert
+liberachat.tls_password
+liberachat.tls_priorities
+liberachat.tls_dhkey_size
+liberachat.tls_fingerprint
+liberachat.tls_verify
 liberachat.password
 liberachat.capabilities
 liberachat.sasl_mechanism = plain
@@ -350,3 +363,4 @@ liberachat.notify
 liberachat.split_msg_max_length
 liberachat.charset_message
 liberachat.default_chantypes
+liberachat.registered_mode
