more weechat blah

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -644,3 +644,7 @@ up = "/cursor move up"
 @item(buflist2):button2* = "hsignal:buflist_mouse"
 @item(buflist3):button1* = "hsignal:buflist_mouse"
 @item(buflist3):button2* = "hsignal:buflist_mouse"
+@item(buflist4):button1* = "hsignal:buflist_mouse"
+@item(buflist4):button2* = "hsignal:buflist_mouse"
+@item(buflist5):button1* = "hsignal:buflist_mouse"
+@item(buflist5):button2* = "hsignal:buflist_mouse"
