revert weechat to f93172e2980a513d38eedfc10fe2387916772748

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -295,7 +295,7 @@ twitch.local_hostname
 twitch.usermode
 twitch.command
 twitch.command_delay
-twitch.autojoin = "#fortiesgamer,#lastmiles,#rwxrob,#herrhotzenplotz"
+twitch.autojoin = "#fortiesgamer,#lastmiles,#rwxrob"
 twitch.autojoin_dynamic
 twitch.autorejoin
 twitch.autorejoin_delay
@@ -341,7 +341,7 @@ liberachat.local_hostname
 liberachat.usermode
 liberachat.command
 liberachat.command_delay
-liberachat.autojoin = "#blastwave,#herrhotzenplotz"
+liberachat.autojoin = "#blastwave"
 liberachat.autojoin_dynamic
 liberachat.autorejoin
 liberachat.autorejoin_delay
