/set irc.server.twitch.command "/quote CAP REQ :twitch.tv/membership" to get the nicklist working correctly for twitch channels

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -247,7 +247,7 @@ twitch1.username = "studywithtony"
 twitch1.realname
 twitch1.local_hostname
 twitch1.usermode
-twitch1.command
+twitch1.command = "/quote CAP REQ :twitch.tv/membership"
 twitch1.command_delay
 twitch1.autojoin = "#studywithtony"
 twitch1.autojoin_dynamic
@@ -293,7 +293,7 @@ twitch.username = "fortiesgamer"
 twitch.realname
 twitch.local_hostname
 twitch.usermode
-twitch.command
+twitch.command = "/quote CAP REQ :twitch.tv/membership"
 twitch.command_delay
 twitch.autojoin = "#fortiesgamer,#lastmiles,#rwxrob"
 twitch.autojoin_dynamic
