--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -341,7 +341,7 @@ liberachat.local_hostname
 liberachat.usermode
 liberachat.command
 liberachat.command_delay
-liberachat.autojoin = "#blastwave"
+liberachat.autojoin = "#blastwave,#herrhotzenplotz"
 liberachat.autojoin_dynamic
 liberachat.autorejoin
 liberachat.autorejoin_delay
