added office plug power draw

--- a/tmux/.tmux-in.conf
+++ b/tmux/.tmux-in.conf
@@ -74,5 +74,6 @@ set -g status-bg default
 set-option -g status-style bg=default
 set -g status-fg green
 set-option -g status-left ""
-set-option -g status-left-length 32
-set-option -g status-right "TMUX Prefix = ctrl+a"
+set-option -g status-left-length 20
+set-option -g status-right-length 50
+set-option -g status-right "Office Plug Power #(shellyplugpower office)W|TMUX Prefix = ctrl+a"
