--- a/ssh/config
+++ b/ssh/config
@@ -73,3 +73,6 @@ Host work
 Host debiantesting
      Hostname 192.168.0.33
     Protocol 2
+Host openmc-testing
+     Hostname 192.168.0.36
+    Protocol 2
