minor tmux banner changes

--- a/tmux/.tmux-in.conf
+++ b/tmux/.tmux-in.conf
@@ -75,5 +75,5 @@ set-option -g status-style bg=default
 set -g status-fg green
 set-option -g status-left ""
 set-option -g status-left-length 20
-set-option -g status-right-length 50
-set-option -g status-right "Office Plug Power #(shellyplugpower office)W | TMUX Prefix = ctrl+a"
+set-option -g status-right-length 70
+set-option -g status-right "Time: #(date "+%H:%M") | Office Plug Power #(shellyplugpower office)W | TMUX Inner: Prefix = ctrl+a"
