--- a/tmux/.tmux-outer.conf
+++ b/tmux/.tmux-outer.conf
@@ -73,6 +73,6 @@ set -g status-position top
 set -g status-bg default
 set-option -g status-style bg=default
 set -g status-fg yellow
-set-option -g status-left ""
+set-option -g status-right ""
 set-option -g status-left-length 64
-set-option -g status-left  "TMUX Prefix = ctrl+b | "
+set-option -g status-left  "TMUX Outer: Prefix = ctrl+b | "
