moved tmux status from right to left

--- a/tmux/.tmux-in.conf
+++ b/tmux/.tmux-in.conf
@@ -73,7 +73,7 @@ set -g status-position top
 set -g status-bg default
 set-option -g status-style bg=default
 set -g status-fg green
-set-option -g status-left ""
-set-option -g status-left-length 20
-set-option -g status-right-length 70
-set-option -g status-right "Time: #(date "+%H:%M") | Office Plug Power #(shellyplugpower office)W | TMUX Inner: Prefix = ctrl+a"
+set-option -g status-right ""
+set-option -g status-right-length 20
+set-option -g status-left-length 75
+set-option -g status-left "Time: #(date "+%H:%M") | Office Plug Power #(shellyplugpower office)W | TMUX Inner: Prefix = ctrl+a | "
