--- a/tmux/.tmux-out.conf
+++ b/tmux/.tmux-out.conf
@@ -75,6 +75,6 @@ set -g window-status-format ''
 set -g status-left ""
 set -g status-left-length 32
 set -g status-right-length 200
-set -g status-right "Streaming Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/obs-streaming-status)\" | Recording Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/obs-recording-status)\" | OBS Scene: \"#(~/repos/github.com/truth998877/dotfiles/scripts/current-obs-scene)\" || TMUX Prefix = ctrl+b"
+set -g status-right "| Streaming Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-streaming)\" | Recording Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-recording)\" | OBS Scene: \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --current-scene)\" || TMUX Prefix = ctrl+b"
 set -g status-fg yellow
 set -g status-bg default
