twitch websocket connection status add to tmux status bar when streaming

--- a/tmux/.tmux-out.conf
+++ b/tmux/.tmux-out.conf
@@ -74,7 +74,7 @@ set -g window-status-current-format ''
 set -g window-status-format ''
 set -g status-left ""
 set -g status-left-length 32
-set -g status-right-length 200
-set -g status-right "| Streaming Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-streaming)\" | Recording Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-recording)\" | OBS Scene: \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --current-scene)\" || TMUX Prefix = ctrl+b"
+set -g status-right-length 250
+set -g status-right "|Twitch Websocket Connection Status - \"#(twitch-websocket-status)\" | Streaming Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-streaming)\" | Recording Status - \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --is-recording)\" | OBS Scene: \"#(~/repos/github.com/truth998877/dotfiles/scripts/local/earth/obs-py --current-scene)\" || TMUX Prefix = ctrl+b"
 set -g status-fg yellow
 set -g status-bg default
