--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -20,7 +20,7 @@ set sort = threads
 set sort_browser=reverse-date
 set sort_aux=reverse-date-received
 set editor = "vim"
-set smtp_authenticators = 'gssapi:login'
 
 set ssl_force_tls = yes
 
+source colors.muttrc
