dotfiles hail mary update

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -9,7 +9,7 @@
 # For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
-config_version = 3
+config_version = 5
 
 [look]
 buffer_open_before_autojoin = on
@@ -31,6 +31,7 @@ display_host_join = on
 display_host_join_local = on
 display_host_notice = on
 display_host_quit = on
+display_host_wallops = on
 display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
@@ -41,11 +42,14 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
+ignore_tag_messages = off
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
 item_nick_prefix = on
 join_auto_add_chantype = off
+list_buffer = on
+list_buffer_format_export = "${name} (${users}): "${topic}""
 list_buffer_scroll_horizontal = 10
 list_buffer_sort = "~name2"
 list_buffer_topic_strip_colors = on
@@ -85,7 +89,6 @@ typing_status_self = off
 
 [color]
 input_nick = lightcyan
-item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
@@ -105,6 +108,7 @@ nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v
 notice = green
 reason_kick = default
 reason_quit = default
+term_remap = "0,-1:darkgray"
 topic_current = default
 topic_new = white
 topic_old = default
@@ -134,10 +138,10 @@ whois_double_nick = off
 
 [server_default]
 addresses = ""
-anti_flood_prio_high = 2
-anti_flood_prio_low = 2
+anti_flood = 2000
 autoconnect = off
 autojoin = ""
+autojoin_delay = 0
 autojoin_dynamic = off
 autoreconnect = on
 autoreconnect_delay = 10
@@ -151,7 +155,7 @@ command = ""
 command_delay = 0
 connection_timeout = 60
 default_chantypes = "#&"
-ipv6 = on
+ipv6 = auto
 local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
@@ -208,15 +212,15 @@ freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.usermode
-freenode.command
 freenode.command_delay
+freenode.command
+freenode.autojoin_delay
 freenode.autojoin = "##fortiesgamer,##studywithtony"
 freenode.autojoin_dynamic
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
+freenode.anti_flood
 freenode.away_check
 freenode.away_check_max_nicks
 freenode.msg_kick
@@ -254,15 +258,15 @@ twitch1.username = "studywithtony"
 twitch1.realname
 twitch1.local_hostname
 twitch1.usermode
-twitch1.command = "/quote CAP REQ :twitch.tv/membership"
 twitch1.command_delay
+twitch1.command = "/quote CAP REQ :twitch.tv/membership"
+twitch1.autojoin_delay
 twitch1.autojoin = "#studywithtony"
 twitch1.autojoin_dynamic
 twitch1.autorejoin
 twitch1.autorejoin_delay
 twitch1.connection_timeout
-twitch1.anti_flood_prio_high
-twitch1.anti_flood_prio_low
+twitch1.anti_flood
 twitch1.away_check
 twitch1.away_check_max_nicks
 twitch1.msg_kick
@@ -300,15 +304,15 @@ twitch.username = "fortiesgamer"
 twitch.realname
 twitch.local_hostname
 twitch.usermode
-twitch.command = "/quote CAP REQ :twitch.tv/membership"
 twitch.command_delay
+twitch.command = "/quote CAP REQ :twitch.tv/membership"
+twitch.autojoin_delay
 twitch.autojoin = "#fortiesgamer,#lastmiles,#rwxrob"
 twitch.autojoin_dynamic
 twitch.autorejoin
 twitch.autorejoin_delay
 twitch.connection_timeout
-twitch.anti_flood_prio_high
-twitch.anti_flood_prio_low
+twitch.anti_flood
 twitch.away_check
 twitch.away_check_max_nicks
 twitch.msg_kick
@@ -346,15 +350,15 @@ liberachat.username
 liberachat.realname
 liberachat.local_hostname
 liberachat.usermode
-liberachat.command
 liberachat.command_delay
+liberachat.command
+liberachat.autojoin_delay
 liberachat.autojoin = "#blastwave,#herrhotzenplotz"
 liberachat.autojoin_dynamic
 liberachat.autorejoin
 liberachat.autorejoin_delay
 liberachat.connection_timeout
-liberachat.anti_flood_prio_high
-liberachat.anti_flood_prio_low
+liberachat.anti_flood
 liberachat.away_check
 liberachat.away_check_max_nicks
 liberachat.msg_kick
