tmux outer config changes - moves status bar to bottom

--- a/tmux/.tmux-outer.conf
+++ b/tmux/.tmux-outer.conf
@@ -69,10 +69,10 @@ bind -r r source-file ~/.tmux-outer.conf
 
 # disable status (use C-w instead)
 set -g status on
-set -g status-position top
+set -g status-position bottom
 set -g status-bg default
 set-option -g status-style bg=default
 set -g status-fg yellow
-set-option -g status-right ""
-set-option -g status-left-length 64
-set-option -g status-left  "TMUX Outer: Prefix = ctrl+b | "
+set-option -g status-left ""
+set-option -g status-right-length 100
+set-option -g status-right  "TMUX Outer: Prefix = ctrl+b"
